--- a/src/pages/Delete.css
+++ b/src/pages/Delete.css
@@ -1,4 +1,6 @@
 #delete-component #name,
-#delete-component #phone {
+#delete-component #phone,
+#delete-component #itemName,
+#delete-component #qty {
     display: none;
 }
