--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,9 @@
   thead, tbody {
     @apply border border-sky-950 text-center bg-sky-200 text-sky-950 font-semibold;
   }
+  tr {
+    @apply hover:bg-sky-700 hover:text-white hover:font-bold transition;
+  }
 }
 
 /* reusable component */
