--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@
     @apply border border-sky-950 text-center bg-sky-200 text-sky-950 font-semibold;
   }
   tbody>tr {
-    @apply hover:bg-sky-700 hover:text-white hover:font-bold transition;
+    @apply cursor-pointer hover:bg-sky-700 hover:text-white hover:font-bold transition;
   }
 }
 
